# oop-using-cpp

./: CMakeLists.txt  README.md  main.cpp
assignments/: StudentProfile.cpp
assignments/assignment-01/: Course.cpp  Instructor.cpp  Laptop.cpp  Person.cpp  Student.cpp  main_assignment_01.cpp
